--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
     <div class="container">
         <div class="gallery">
-            <img src="https://drive.google.com/uc?id=1p29NyMs6LSbUiSIhKgnTDO-2orCll4NV" alt="รูปภาพ 1">
-            <img src="https://drive.google.com/uc?id=1ob1A2nzB5zK2Fe6NtLfpeQysy-ISb-67" alt="รูปภาพ 2">
-            <img src="https://drive.google.com/uc?id=1p5E8dtRA4ppo6ud1ayeINKVcDYnJoI0O" alt="รูปภาพ 3">
-            <img src="https://drive.google.com/uc?id=1ou11LR43eIp9EoxQRtGrQeJKuxZsT3AX" alt="รูปภาพ 4">
-            <img src="https://drive.google.com/uc?id=1odEbz6fm9q5qqxac-cRBArlHuyetwqJt" alt="รูปภาพ 5">
-            <img src="https://drive.google.com/uc?id=1osVH1v3eP9ON547erQIRFapr5WGHyGgC" alt="รูปภาพ 6">
+            <img src="1.jpg" alt="รูปภาพ 1">
+            <img src="2.jpg" alt="รูปภาพ 2">
+            <img src="3.jpg" alt="รูปภาพ 3">
+            <img src="4.jpg" alt="รูปภาพ 4">
+            <img src="5.jpg" alt="รูปภาพ 5">
+            <img src="6.jpg" alt="รูปภาพ 6">
         </div>
     </div>
     
