--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         .text-section {
             margin-bottom: 20px;
         }
+        
+        /* เพิ่มเอฟเฟกต์เมื่อวางเมาส์ */
+        .gallery img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
     </style>
 </head>
 <body>
@@ -62,5 +69,10 @@
     <div class="container" style="margin-top: 20px;">
         <p>รักแม่นะครับ</p>
     </div>
+    
+    <audio controls autoplay loop>
+      <source src="pantip.mp3" type="audio/mpeg">
+      เบราว์เซอร์ของคุณไม่รองรับการเล่นไฟล์เสียง
+    </audio>
 </body>
 </html>
